gcc/testsuite/rust/rustc/ui/async-await/no-params-non-move-async-closure.rs
// edition:2018

#![feature(async_closure)]

fn main() {
    let _ = async |x: u8| {};
// { dg-error ".E0708." "" { target *-*-* } .-1 }
}

